LineItemRescheduler/force-app/main/default/objects/Opportunity/fields/Update_Schedule_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Update_Schedule_Start_Date__c</fullName>
    <label>Update Schedule Start Date</label>
    <type>Date</type>
</CustomField>