LineItemRescheduler/force-app/main/default/objects/Opportunity/fields/Update_Schedules__c.field-meta.xml
<CustomField>
    <fullName>Update_Schedules__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When updating the close date, check this box to update the product schedules at the same time</inlineHelpText>
    <label>Update Schedules</label>
    <type>Checkbox</type>
</CustomField>